InventoryManagement/force-app/main/default/objects/Product2/Product2.object-meta.xml
<CustomObject>
    <!--    <compactLayoutAssignment>SYSTEM</compactLayoutAssignment>
    <sharingModel>ReadWrite</sharingModel>-->
</CustomObject>