InventoryManagement/force-app/main/default/objects/Product2/fields/Total_In_Stock__c.field-meta.xml
<CustomField>
    <fullName>Total_In_Stock__c</fullName>
    <label>Total In Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>