InventoryManagement/force-app/main/default/objects/Product2/fields/Total_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Total_Outstanding__c</fullName>
    <label>Total Outstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>