InventoryManagement/force-app/main/default/objects/Product2/fields/Total_to_sell__c.field-meta.xml
<CustomField>
    <fullName>Total_to_sell__c</fullName>
    <formula>Total_Incoming__c +  Total_In_Stock__c  -  Total_Outstanding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total to sell</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>